codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5212
expression: terminal.backend()
---
"  Keyboard shortcuts                                                                                "
"                                                                                                    "
"  Compose                      Session                   Transcript (open first)                    "
"  /       Commands             tab   Send message        ⌃t            Open transcript              "
"  @       Mention files        ⇧tab  Permissions         f3            Find text                    "
"  !       Shell command        ⌥,    Less reasoning      pgup / pgdn   Scroll                       "
"  ⇧enter  New line             ⌥.    More reasoning      ⌃space        Start selection              "
"  ⌃v      Paste image          f4    Inspect activity    ⌃home / ⌃end  Top / latest                 "
"  ⌃g      External editor      ⌃c    Quit                ⇧⌥, / ⇧⌥.     Top / latest                 "
"  ⌃r      Search history                                                                            "
"  esc     Edit last message                                                                         "
"                                                                                                    "
"  /keymap customize                                                                                 "
"                                                                                                    "
"› Ask Elpis to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? / esc close                                                                                     "
