codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__light_terminal_palette_composer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "┌──────────────────────────────────────────────┐",
        "› Ask Elpis to do anything                     │",
        "│                                              │",
        "│                                              │",
        "└──────────────────────────────────────────────┘",
        "        100% context left · Tab Context Ledger  ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 5, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 217), underline: Reset, modifier: NONE,
        x: 7, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(238, 233, 218), underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(239, 233, 218), underline: Reset, modifier: NONE,
        x: 9, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(239, 234, 219), underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(239, 234, 220), underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(240, 234, 221), underline: Reset, modifier: NONE,
        x: 12, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(240, 235, 221), underline: Reset, modifier: NONE,
        x: 13, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(241, 236, 222), underline: Reset, modifier: NONE,
        x: 14, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(241, 236, 223), underline: Reset, modifier: NONE,
        x: 15, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(241, 237, 225), underline: Reset, modifier: NONE,
        x: 16, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(242, 237, 226), underline: Reset, modifier: NONE,
        x: 17, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(242, 238, 227), underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(243, 239, 228), underline: Reset, modifier: NONE,
        x: 19, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(243, 240, 229), underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(244, 240, 230), underline: Reset, modifier: NONE,
        x: 21, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(245, 241, 232), underline: Reset, modifier: NONE,
        x: 22, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(245, 242, 233), underline: Reset, modifier: NONE,
        x: 23, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(246, 243, 234), underline: Reset, modifier: NONE,
        x: 24, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(246, 243, 236), underline: Reset, modifier: NONE,
        x: 25, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(247, 244, 237), underline: Reset, modifier: NONE,
        x: 26, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(247, 245, 238), underline: Reset, modifier: NONE,
        x: 27, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(248, 246, 240), underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(249, 246, 241), underline: Reset, modifier: NONE,
        x: 29, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(249, 247, 242), underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(250, 248, 243), underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(250, 249, 244), underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(251, 249, 245), underline: Reset, modifier: NONE,
        x: 33, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(251, 250, 247), underline: Reset, modifier: NONE,
        x: 34, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(251, 250, 248), underline: Reset, modifier: NONE,
        x: 35, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(252, 251, 249), underline: Reset, modifier: NONE,
        x: 36, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(252, 252, 249), underline: Reset, modifier: NONE,
        x: 37, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(253, 252, 250), underline: Reset, modifier: NONE,
        x: 38, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(253, 252, 251), underline: Reset, modifier: NONE,
        x: 39, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(253, 253, 252), underline: Reset, modifier: NONE,
        x: 40, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(254, 253, 252), underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(254, 254, 253), underline: Reset, modifier: NONE,
        x: 43, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(254, 254, 254), underline: Reset, modifier: NONE,
        x: 47, y: 0, fg: Rgb(122, 150, 144), bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 216), underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Rgb(238, 232, 216), underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Rgb(238, 232, 217), underline: Reset, modifier: DIM,
        x: 7, y: 1, fg: Reset, bg: Rgb(238, 233, 218), underline: Reset, modifier: DIM,
        x: 8, y: 1, fg: Reset, bg: Rgb(239, 233, 218), underline: Reset, modifier: DIM,
        x: 9, y: 1, fg: Reset, bg: Rgb(239, 234, 219), underline: Reset, modifier: DIM,
        x: 10, y: 1, fg: Reset, bg: Rgb(239, 234, 220), underline: Reset, modifier: DIM,
        x: 11, y: 1, fg: Reset, bg: Rgb(240, 234, 221), underline: Reset, modifier: DIM,
        x: 12, y: 1, fg: Reset, bg: Rgb(240, 235, 221), underline: Reset, modifier: DIM,
        x: 13, y: 1, fg: Reset, bg: Rgb(241, 236, 222), underline: Reset, modifier: DIM,
        x: 14, y: 1, fg: Reset, bg: Rgb(241, 236, 223), underline: Reset, modifier: DIM,
        x: 15, y: 1, fg: Reset, bg: Rgb(241, 237, 225), underline: Reset, modifier: DIM,
        x: 16, y: 1, fg: Reset, bg: Rgb(242, 237, 226), underline: Reset, modifier: DIM,
        x: 17, y: 1, fg: Reset, bg: Rgb(242, 238, 227), underline: Reset, modifier: DIM,
        x: 18, y: 1, fg: Reset, bg: Rgb(243, 239, 228), underline: Reset, modifier: DIM,
        x: 19, y: 1, fg: Reset, bg: Rgb(243, 240, 229), underline: Reset, modifier: DIM,
        x: 20, y: 1, fg: Reset, bg: Rgb(244, 240, 230), underline: Reset, modifier: DIM,
        x: 21, y: 1, fg: Reset, bg: Rgb(245, 241, 232), underline: Reset, modifier: DIM,
        x: 22, y: 1, fg: Reset, bg: Rgb(245, 242, 233), underline: Reset, modifier: DIM,
        x: 23, y: 1, fg: Reset, bg: Rgb(246, 243, 234), underline: Reset, modifier: DIM,
        x: 24, y: 1, fg: Reset, bg: Rgb(246, 243, 236), underline: Reset, modifier: DIM,
        x: 25, y: 1, fg: Reset, bg: Rgb(247, 244, 237), underline: Reset, modifier: DIM,
        x: 26, y: 1, fg: Reset, bg: Rgb(247, 245, 238), underline: Reset, modifier: NONE,
        x: 27, y: 1, fg: Reset, bg: Rgb(248, 246, 240), underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Reset, bg: Rgb(249, 246, 241), underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Reset, bg: Rgb(249, 247, 242), underline: Reset, modifier: NONE,
        x: 30, y: 1, fg: Reset, bg: Rgb(250, 248, 243), underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: Reset, bg: Rgb(250, 249, 244), underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: Reset, bg: Rgb(251, 249, 245), underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Rgb(251, 250, 247), underline: Reset, modifier: NONE,
        x: 34, y: 1, fg: Reset, bg: Rgb(251, 250, 248), underline: Reset, modifier: NONE,
        x: 35, y: 1, fg: Reset, bg: Rgb(252, 251, 249), underline: Reset, modifier: NONE,
        x: 36, y: 1, fg: Reset, bg: Rgb(252, 252, 249), underline: Reset, modifier: NONE,
        x: 37, y: 1, fg: Reset, bg: Rgb(253, 252, 250), underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Rgb(253, 252, 251), underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Rgb(253, 253, 252), underline: Reset, modifier: NONE,
        x: 40, y: 1, fg: Reset, bg: Rgb(254, 253, 252), underline: Reset, modifier: NONE,
        x: 41, y: 1, fg: Reset, bg: Rgb(254, 254, 253), underline: Reset, modifier: NONE,
        x: 43, y: 1, fg: Reset, bg: Rgb(254, 254, 254), underline: Reset, modifier: NONE,
        x: 47, y: 1, fg: Rgb(122, 150, 144), bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 5, y: 2, fg: Reset, bg: Rgb(238, 232, 217), underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Rgb(238, 233, 218), underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Rgb(239, 233, 218), underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Reset, bg: Rgb(239, 234, 219), underline: Reset, modifier: NONE,
        x: 10, y: 2, fg: Reset, bg: Rgb(239, 234, 220), underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Rgb(240, 234, 221), underline: Reset, modifier: NONE,
        x: 12, y: 2, fg: Reset, bg: Rgb(240, 235, 221), underline: Reset, modifier: NONE,
        x: 13, y: 2, fg: Reset, bg: Rgb(241, 236, 222), underline: Reset, modifier: NONE,
        x: 14, y: 2, fg: Reset, bg: Rgb(241, 236, 223), underline: Reset, modifier: NONE,
        x: 15, y: 2, fg: Reset, bg: Rgb(241, 237, 225), underline: Reset, modifier: NONE,
        x: 16, y: 2, fg: Reset, bg: Rgb(242, 237, 226), underline: Reset, modifier: NONE,
        x: 17, y: 2, fg: Reset, bg: Rgb(242, 238, 227), underline: Reset, modifier: NONE,
        x: 18, y: 2, fg: Reset, bg: Rgb(243, 239, 228), underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Reset, bg: Rgb(243, 240, 229), underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Rgb(244, 240, 230), underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Reset, bg: Rgb(245, 241, 232), underline: Reset, modifier: NONE,
        x: 22, y: 2, fg: Reset, bg: Rgb(245, 242, 233), underline: Reset, modifier: NONE,
        x: 23, y: 2, fg: Reset, bg: Rgb(246, 243, 234), underline: Reset, modifier: NONE,
        x: 24, y: 2, fg: Reset, bg: Rgb(246, 243, 236), underline: Reset, modifier: NONE,
        x: 25, y: 2, fg: Reset, bg: Rgb(247, 244, 237), underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Rgb(247, 245, 238), underline: Reset, modifier: NONE,
        x: 27, y: 2, fg: Reset, bg: Rgb(248, 246, 240), underline: Reset, modifier: NONE,
        x: 28, y: 2, fg: Reset, bg: Rgb(249, 246, 241), underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Rgb(249, 247, 242), underline: Reset, modifier: NONE,
        x: 30, y: 2, fg: Reset, bg: Rgb(250, 248, 243), underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: Reset, bg: Rgb(250, 249, 244), underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: Reset, bg: Rgb(251, 249, 245), underline: Reset, modifier: NONE,
        x: 33, y: 2, fg: Reset, bg: Rgb(251, 250, 247), underline: Reset, modifier: NONE,
        x: 34, y: 2, fg: Reset, bg: Rgb(251, 250, 248), underline: Reset, modifier: NONE,
        x: 35, y: 2, fg: Reset, bg: Rgb(252, 251, 249), underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: Reset, bg: Rgb(252, 252, 249), underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Reset, bg: Rgb(253, 252, 250), underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Rgb(253, 252, 251), underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Rgb(253, 253, 252), underline: Reset, modifier: NONE,
        x: 40, y: 2, fg: Reset, bg: Rgb(254, 253, 252), underline: Reset, modifier: NONE,
        x: 41, y: 2, fg: Reset, bg: Rgb(254, 254, 253), underline: Reset, modifier: NONE,
        x: 43, y: 2, fg: Reset, bg: Rgb(254, 254, 254), underline: Reset, modifier: NONE,
        x: 47, y: 2, fg: Rgb(122, 150, 144), bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Reset, bg: Rgb(238, 232, 217), underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Reset, bg: Rgb(238, 233, 218), underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Rgb(239, 233, 218), underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Reset, bg: Rgb(239, 234, 219), underline: Reset, modifier: NONE,
        x: 10, y: 3, fg: Reset, bg: Rgb(239, 234, 220), underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Reset, bg: Rgb(240, 234, 221), underline: Reset, modifier: NONE,
        x: 12, y: 3, fg: Reset, bg: Rgb(240, 235, 221), underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: Reset, bg: Rgb(241, 236, 222), underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: Reset, bg: Rgb(241, 236, 223), underline: Reset, modifier: NONE,
        x: 15, y: 3, fg: Reset, bg: Rgb(241, 237, 225), underline: Reset, modifier: NONE,
        x: 16, y: 3, fg: Reset, bg: Rgb(242, 237, 226), underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Reset, bg: Rgb(242, 238, 227), underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Reset, bg: Rgb(243, 239, 228), underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Rgb(243, 240, 229), underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Reset, bg: Rgb(244, 240, 230), underline: Reset, modifier: NONE,
        x: 21, y: 3, fg: Reset, bg: Rgb(245, 241, 232), underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Reset, bg: Rgb(245, 242, 233), underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Rgb(246, 243, 234), underline: Reset, modifier: NONE,
        x: 24, y: 3, fg: Reset, bg: Rgb(246, 243, 236), underline: Reset, modifier: NONE,
        x: 25, y: 3, fg: Reset, bg: Rgb(247, 244, 237), underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Rgb(247, 245, 238), underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: Reset, bg: Rgb(248, 246, 240), underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Reset, bg: Rgb(249, 246, 241), underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Reset, bg: Rgb(249, 247, 242), underline: Reset, modifier: NONE,
        x: 30, y: 3, fg: Reset, bg: Rgb(250, 248, 243), underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Rgb(250, 249, 244), underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Rgb(251, 249, 245), underline: Reset, modifier: NONE,
        x: 33, y: 3, fg: Reset, bg: Rgb(251, 250, 247), underline: Reset, modifier: NONE,
        x: 34, y: 3, fg: Reset, bg: Rgb(251, 250, 248), underline: Reset, modifier: NONE,
        x: 35, y: 3, fg: Reset, bg: Rgb(252, 251, 249), underline: Reset, modifier: NONE,
        x: 36, y: 3, fg: Reset, bg: Rgb(252, 252, 249), underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Reset, bg: Rgb(253, 252, 250), underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Rgb(253, 252, 251), underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Reset, bg: Rgb(253, 253, 252), underline: Reset, modifier: NONE,
        x: 40, y: 3, fg: Reset, bg: Rgb(254, 253, 252), underline: Reset, modifier: NONE,
        x: 41, y: 3, fg: Reset, bg: Rgb(254, 254, 253), underline: Reset, modifier: NONE,
        x: 43, y: 3, fg: Reset, bg: Rgb(254, 254, 254), underline: Reset, modifier: NONE,
        x: 47, y: 3, fg: Rgb(122, 150, 144), bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 216), underline: Reset, modifier: NONE,
        x: 5, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(238, 232, 217), underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(238, 233, 218), underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(239, 233, 218), underline: Reset, modifier: NONE,
        x: 9, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(239, 234, 219), underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(239, 234, 220), underline: Reset, modifier: NONE,
        x: 11, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(240, 234, 221), underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(240, 235, 221), underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(241, 236, 222), underline: Reset, modifier: NONE,
        x: 14, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(241, 236, 223), underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(241, 237, 225), underline: Reset, modifier: NONE,
        x: 16, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(242, 237, 226), underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(242, 238, 227), underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(243, 239, 228), underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(243, 240, 229), underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(244, 240, 230), underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(245, 241, 232), underline: Reset, modifier: NONE,
        x: 22, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(245, 242, 233), underline: Reset, modifier: NONE,
        x: 23, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(246, 243, 234), underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(246, 243, 236), underline: Reset, modifier: NONE,
        x: 25, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(247, 244, 237), underline: Reset, modifier: NONE,
        x: 26, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(247, 245, 238), underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(248, 246, 240), underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(249, 246, 241), underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(249, 247, 242), underline: Reset, modifier: NONE,
        x: 30, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(250, 248, 243), underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(250, 249, 244), underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(251, 249, 245), underline: Reset, modifier: NONE,
        x: 33, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(251, 250, 247), underline: Reset, modifier: NONE,
        x: 34, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(251, 250, 248), underline: Reset, modifier: NONE,
        x: 35, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(252, 251, 249), underline: Reset, modifier: NONE,
        x: 36, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(252, 252, 249), underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(253, 252, 250), underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(253, 252, 251), underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(253, 253, 252), underline: Reset, modifier: NONE,
        x: 40, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(254, 253, 252), underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(254, 254, 253), underline: Reset, modifier: NONE,
        x: 43, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(254, 254, 254), underline: Reset, modifier: NONE,
        x: 47, y: 4, fg: Rgb(122, 150, 144), bg: Rgb(255, 255, 255), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Rgb(118, 119, 117), bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
