codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__mention_popup_type_prefixes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5345
expression: terminal.backend()
---
"                                                                        "
"› Google Calendar  [Skill] Find availability and plan event changes     "
"  Google Calendar  [App] Look up events and availability                "
"                                                                        "
"  enter insert · esc close                                              "
"───────────────────────────────────────────────────────────────────────┐"
"› $goog                                                                │"
"───────────────────────────────────────────────────────────────────────┘"
"                                100% context left · Tab Context Ledger  "
